--- a/style.css
+++ b/style.css
@@ -17,27 +17,63 @@ body {
 }
 
 .container-jogo {
-    padding: 0 120px;
+    padding: 0 50px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
+}
+
+.linha1-cartas {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.linha2-cartas {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.flip-container {
+    width: 117px;
+    height: 146px;
+    perspective: 2000px;
+    margin: 17px;
+    cursor: pointer;
 }
 
 .carta {
-    width: 117px;
-    height: 146px;
+    width: 100%;
+    height: 100%;
     background-color: #99CEA8;
     border-radius: 5px;
     border: 1px solid #99CEA8;
+    transform-style: preserve-3d;
+    transition: transform 0.8s;
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 17px;
 }
 
-.carta img {
-    width: 100px;
+.face img {
+    width: 100%;
+    padding: 10px;
 }
 
+.face {
+	position: absolute;
+	width: 100%;
+    backface-visibility: hidden;
+}
+
+.back-face{
+	transform: rotateY(180deg);
+}
+
+.carta-virada{
+    transform: rotateY(180deg);
+}
 
 @media (max-width: 767px) {
     .titulo {
@@ -45,8 +81,11 @@ body {
         padding: 40px 20px 47px 20px;
     }
 
-    .container-jogo {
+    .linha1-cartas {
         flex-direction: column;
-        align-items: center;
+    }
+    
+    .linha2-cartas {
+        flex-direction: column;
     }
 }
