--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
     border-radius: 5px;
     border: 1px solid #99CEA8;
     transform-style: preserve-3d;
-    transition: transform 0.8s;
+    transition: transform 0.6s;
     position: relative;
     display: flex;
     justify-content: center;
@@ -59,6 +59,14 @@ body {
 .face img {
     width: 100%;
     padding: 10px;
+}
+
+.front-face {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .face {
